[package]
name = "astar"
version = "0.1.0"
edition = "2024"
rust-version = "1.96"

authors = ["TheBizzle <jason.bertsche@gmail.com>"]
description = "The A* pathfinding algorithm"
license = "BSD-3"
repository = "https://github.com/TheBizzle/AStar-Rust"
readme = "README.md"

keywords = ["astar", "maze", "navigation", "pathfinding", "tilemap"]
categories = ["algorithms"]

publish = false

[dependencies]
pf_core = { path = "../pf_core" }
testset = { path = "../testset" }
paste = { version = "1.0.15" }

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = "deny"
pedantic = "deny"
nursery = "deny"
